amened the footer section. removed the container fluid as it was creating too much margin. changed the hover action to be a change of colour rather than font-weight to reduce sizing issues

--- a/src/stylesheets/Banner.scss
+++ b/src/stylesheets/Banner.scss
@@ -21,7 +21,6 @@
   transition: 0.3s;
   &:hover {
       text-decoration: none;
-      padding: 12px;
   }
 }
 
