--- a/src/stylesheets/Footer.scss
+++ b/src/stylesheets/Footer.scss
@@ -15,7 +15,7 @@
     color: white;
   }
     a:hover {
-    font-weight:800;
+    color: $green;
     }
 }
 
